12-kuber-homeworks-3.3/deploy/cache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache
  namespace: App
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cache
  template:
    metadata:
      labels:
        app: cache
    spec:
      containers:
        - name: cache
          image: network-multitool
