12-kuber-homeworks-3.3/deploy/front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: App
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: network-multitool
