12-kuber-homeworks-3.3/deploy/servicecache.yaml
apiVersion: v1
kind: Service
metadata:
  name: cache
  namespace: App
spec:
  selector:
    app: cache
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
