12-kuber-homeworks-3.3/deploy/Npdeny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-external-traffic
  namespace: app
spec:
  podSelector: {}
  ingress: []
